# ggoat

./: .bumpversion.cfg  README.md  pyproject.toml  setup.py  setup.py.bak
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  main.yml  publish-docs.yml  publish-pypi.yml  release.yml
.github/workflows-backup/: publish-docs.yml  release.yml
docs/: .readthedocs.yaml  conf.py
src/ggoat/: __init__.py  aes.py  bistro.py  bridge.py  core.py  geoms.py  geospatial.py  labels.py  positions.py  scales.py  themes.py  utils.py
tools/: letsplot_api_autogen.py  letsplot_api_scanner.py
